Colaboratory を使用して作成しました

--- a/learnhaskell.ipynb
+++ b/learnhaskell.ipynb
@@ -6,7 +6,7 @@
       "name": "learnhaskell.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP4IzRzQfMCuKGMNvsknEz5",
+      "authorship_tag": "ABX9TyOFESW1xtn7T6EKmOcez/AG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -67,9 +67,9 @@
       "source": [
         "# haskell(ghc)のインストール\n",
         "%%capture\n",
-        "!apt install ghc\n"
+        "!apt install ghc"
       ],
-      "execution_count": null,
+      "execution_count": 119,
       "outputs": []
     },
     {
@@ -79,13 +79,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c4bc4fb0-901e-4c1e-ef53-4c3190593917"
+        "outputId": "37bdb6e1-017b-4803-ebd8-74fbe75715ae"
       },
       "source": [
         "# インストールされたことの確認\n",
-        "!ghc --version\n"
+        "!ghc --version"
       ],
-      "execution_count": null,
+      "execution_count": 122,
       "outputs": [
         {
           "output_type": "stream",
@@ -103,13 +103,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "52c568ed-eddf-44cc-bb91-984c3f2a1fe3"
+        "outputId": "1ab5bbda-792f-438f-c797-e6173e8895e8"
       },
       "source": [
         "%%writefile hello.hs\n",
         "main = putStrLn \"hello, world\""
       ],
-      "execution_count": null,
+      "execution_count": 123,
       "outputs": [
         {
           "output_type": "stream",
@@ -127,12 +127,12 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "00d67af0-555e-4cc0-d51c-1c73738eb28e"
+        "outputId": "b4074dbf-ca31-4b8b-8d77-d9c07c365e95"
       },
       "source": [
         "!runghc hello.hs"
       ],
-      "execution_count": null,
+      "execution_count": 124,
       "outputs": [
         {
           "output_type": "stream",
@@ -1000,7 +1000,7 @@
         "id": "IJcQNo4G2TJJ"
       },
       "source": [
-        "## タプル"
+        "# タプル"
       ]
     },
     {
@@ -1096,7 +1096,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "22624b7e-3837-48c6-c8f7-e48e02bff0c6"
+        "outputId": "301014f1-9610-40ab-ad1c-dad0737003c4"
       },
       "source": [
         "%%writefile Test.hs\n",
@@ -1110,12 +1110,12 @@
         "              then putStrLn \"You're right!\"\n",
         "              else putStrLn \"You're wrong!\""
       ],
-      "execution_count": null,
+      "execution_count": 137,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Writing Test.hs\n"
+            "Overwriting Test.hs\n"
           ],
           "name": "stdout"
         }
@@ -1124,11 +1124,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5uBBmlwM5WJZ",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "8707df6a-53ad-47ee-88b7-fc16f4d6952e"
+        "id": "5uBBmlwM5WJZ"
       },
       "source": [
         "# script false の行を # でコメントアウトして実行すると、入力待ちになる。出力欄をクリックして入力ウィンドウに入力することができる。\n",
@@ -1137,13 +1133,168 @@
         "!ghc --make Test.hs; ./Test"
       ],
       "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YTEAzvR9nTp8",
+        "outputId": "af4ece23-e184-4c67-c5e4-395570689f2e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile factorial.hs\n",
+        "\n",
+        "factorial n = if n == 0 then 1 else n * factorial (n - 1)\n",
+        "\n",
+        "main = do putStrLn \"What is 5! ?\"\n",
+        "          x <- readLn\n",
+        "          if x == factorial 5\n",
+        "              then putStrLn \"You're right!\"\n",
+        "              else putStrLn \"You're wrong!\""
+      ],
+      "execution_count": 139,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting factorial.hs\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jAVkoqgvnu0-",
+        "outputId": "fdcaab38-1f99-4324-e1bd-908a1d447c44",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!echo 120 | runghc factorial.hs\n",
+        "!echo 150 | runghc factorial.hs"
+      ],
+      "execution_count": 142,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "What is 5! ?\n",
+            "You're right!\n",
+            "What is 5! ?\n",
+            "You're wrong!\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pooc_yHlqaA6",
+        "outputId": "38996b96-6466-49e7-fc1b-cca8c3c377d6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile factorial02.hs\n",
+        "\n",
+        "factorial n = if n == 0 then 1 else n * factorial (n - 1)\n",
+        "\n",
+        "main = do\n",
+        "        print(factorial 5)\n",
+        "        print(factorial 4)"
+      ],
+      "execution_count": 146,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting factorial02.hs\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "woeE70_PqoSd",
+        "outputId": "ee8d21aa-2f90-4bfb-a5cb-2a4d9cd27e6c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!runghc factorial02.hs"
+      ],
+      "execution_count": 147,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
             "120\n",
-            "You're right!\n"
+            "24\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ajXsLOal5uxz",
+        "outputId": "9456fd56-4c41-4269-e606-0561c9872e6c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "%%writefile factorial03.hs\n",
+        "\n",
+        "factorial 0 = 1\n",
+        "factorial n = n * factorial (n - 1)\n",
+        "\n",
+        "main = do\n",
+        "        print(factorial 6)\n",
+        "        print(factorial 5)"
+      ],
+      "execution_count": 148,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing factorial03.hs\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PCiTutabrJL1",
+        "outputId": "ddff430b-c098-43c3-b4f2-42b4c6f019eb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!runghc factorial03.hs"
+      ],
+      "execution_count": 149,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "720\n",
+            "120\n"
           ],
           "name": "stdout"
         }
@@ -1157,40 +1308,6 @@
       "source": [
         "# いまここ"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "o22NOUIZ5aYf"
-      },
-      "source": [
-        "$ ghci Test.hs\n",
-        "GHCi, version 8.6.5: http://www.haskell.org/ghc/  :? for help\n",
-        "[1 of 1] Compiling Main             ( test.hs, interpreted )\n",
-        "Ok, one module loaded.\n",
-        "*Main> factorial 4\n",
-        "24\n",
-        "*Main> main\n",
-        "What is 5! ?\n",
-        "100\n",
-        "You're wrong!\n",
-        "*Main> :t factorial\n",
-        "factorial :: (Eq p, Num p) => p -> p\n"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "ajXsLOal5uxz"
-      },
-      "source": [
-        "factorial 0 = 1\n",
-        "factorial n = n * factorial (n - 1)\n"
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1283,7 +1400,7 @@
         "        Just n  -> do putStr \"Errors per line: \"\n",
         "                      print n"
       ],
-      "execution_count": 112,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1306,7 +1423,7 @@
       "source": [
         "!echo Don | runghc importqualified.hs"
       ],
-      "execution_count": 113,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1330,7 +1447,7 @@
       "source": [
         "!echo Bob | runghc importqualified.hs"
       ],
-      "execution_count": 114,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1384,7 +1501,7 @@
         "!ghc -e '1892 - 1472'\n",
         "!ghc -e '5 / 2'"
       ],
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1412,7 +1529,7 @@
         "!ghc -e '50 * 100 - 4999'\n",
         "!ghc -e '50 * (100 - 4999)'"
       ],
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1441,7 +1558,7 @@
         "!ghc -e 'not False'\n",
         "!ghc -e 'not (True && True)'\n"
       ],
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1471,7 +1588,7 @@
         "!ghc -e 'min 3.4 3.2'\n",
         "!ghc -e 'max 100 101'\n"
       ],
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1509,7 +1626,7 @@
         "!ghc -e 'succ 9 + max 5 4 + 1'\n",
         "!ghc -e '(succ 9) + (max 5 4) + 1'"
       ],
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1533,7 +1650,7 @@
       "source": [
         "!ghc -e 'succ 9 * 10'"
       ],
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1567,7 +1684,7 @@
         "!ghc -e '92 / 10'\n",
         "!ghc -e '92 `mod` 10'"
       ],
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1606,7 +1723,7 @@
         "    print(doubleMe 9)\n",
         "    print(doubleMe 8.3)"
       ],
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1629,7 +1746,7 @@
       "source": [
         "!runghc doubleme.hs"
       ],
-      "execution_count": 94,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1660,7 +1777,7 @@
         "    print(doubleUs 2.3 34.2)\n",
         "    print(doubleUs 28 88 + doubleMe 123)"
       ],
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1683,7 +1800,7 @@
       "source": [
         "!runghc doubleus.hs"
       ],
-      "execution_count": 100,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
