--- a/learnhaskell.ipynb
+++ b/learnhaskell.ipynb
@@ -6,7 +6,7 @@
       "name": "learnhaskell.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNB7GTtEb55YNRlGrscIvJ/",
+      "authorship_tag": "ABX9TyNBMaW3oTeSPRkMiD1rJvlK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,9 +39,7 @@
         "1. Colab の環境で Haskell のインタラクティブ環境は使えないので、`%%writefile filename.hs` でファイルを作り、`!runghc filename.hs` で実行する。\n",
         "\n",
         "1. とりあえずは Haskell の入門書や入門サイトからサンプルプログラムを入力してみる。\n",
-        "1. https://wiki.haskell.org/Haskell入門_5ステップ\n",
-        "1. 10分で学ぶHaskell (https://wiki.haskell.org/10分で学ぶHaskell)\n",
-        "1. Learn You A Haskell For Great Good! (http://learnyouahaskell.com/)  <= いまここ\n",
+        "1. Learn You A Haskell For Great Good! (http://learnyouahaskell.com/)  \n",
         "1. A Gentle Introduction to Haskell (https://www.haskell.org/tutorial/)\n",
         "1. Yet Another Haskell Tutorial (http://users.umiacs.umd.edu/~hal/docs/daume02yaht.pdf)\n",
         "1. https://wiki.haskell.org/How_to_work_on_lists\n",
@@ -69,7 +67,7 @@
         "%%capture\n",
         "!apt install ghc"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -79,18 +77,18 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "37bdb6e1-017b-4803-ebd8-74fbe75715ae"
+        "outputId": "e99f0efa-c286-4a5b-f75f-e4d24cabae1b"
       },
       "source": [
         "# インストールされたことの確認\n",
         "!ghc --version"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "The Glorious Glasgow Haskell Compilation System, version 8.0.2\n"
+            "/bin/bash: ghc: command not found\n"
           ],
           "name": "stdout"
         }
@@ -1265,7 +1263,7 @@
         "id": "ksOskHSJd4p1"
       },
       "source": [
-        ""
+        "パターンマッチングを利用して次のように書く書き方もある。"
       ]
     },
     {
@@ -1328,32 +1326,62 @@
         "id": "12WQ1L4CwK6G"
       },
       "source": [
-        "# いまここ"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Zu-Sa_a36AAC"
-      },
-      "source": [
-        "# 便利な構文"
+        "ちなみに、Colab では 複数のセルを選択して、 Ctrl+Shift+Enter すると、便利である。"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Gmg_4nAo6CoH"
+        "id": "Gmg_4nAo6CoH",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6ec811d3-8ebc-436b-b9b2-428fb8ecc271"
       },
       "source": [
+        "%%writefile let01.hs\n",
         "secsToWeeks secs = let perMinute = 60\n",
         "                       perHour   = 60 * perMinute\n",
         "                       perDay    = 24 * perHour\n",
         "                       perWeek   =  7 * perDay\n",
-        "                   in  secs / perWeek"
+        "                   in  secs / perWeek\n",
+        "\n",
+        "main = do\n",
+        "        print (secsToWeeks 100000)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting let01.hs\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HP9L2lybgzRS",
+        "outputId": "4d59aee0-13cd-43e5-d332-c0b5c4b5b3d5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!runghc let01.hs"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0.16534391534391535\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1361,24 +1389,63 @@
         "id": "M67kE5oy6ZKp"
       },
       "source": [
-        "上コードセルで、let , in は一時的な名前を定義している。\n",
-        "\n",
-        "`{}` と `:` による定義もできる。 check_later"
+        "上コードセルで、let , in は一時的な名前を定義している。\n"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "XN5488-c6Xtm"
+        "id": "XN5488-c6Xtm",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5cc91a42-a558-420f-d3ab-4394706c966c"
       },
       "source": [
+        "%%writefile case01.hs\n",
         "classify age = case age of 0 -> \"newborn\"\n",
         "                           1 -> \"infant\"\n",
         "                           2 -> \"toddler\"\n",
-        "                           _ -> \"senior citizen\""
+        "                           _ -> \"senior citizen\"\n",
+        "\n",
+        "main = do\n",
+        "        putStrLn (classify 0)                           \n",
+        "        putStrLn (classify 69)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Writing case01.hs\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZzkYe9drhp7a",
+        "outputId": "0cd588e3-127e-4205-9ea4-545c79453cda",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!runghc case01.hs"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "newborn\n",
+            "senior citizen\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1487,26 +1554,8 @@
         "id": "05q0I6VCAal4"
       },
       "source": [
-        "# ここから  Learn You A Haskell For Great Good!"
+        "# 四則演算"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Lat2FpdBnUK3"
-      },
-      "source": [
-        "ghci> 2 + 15\n",
-        "17\n",
-        "ghci> 49 * 100\n",
-        "4900\n",
-        "ghci> 1892 - 1472\n",
-        "420\n",
-        "ghci> 5 / 2\n",
-        "2.5\n"
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1720,6 +1769,40 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JPs9z0Agin6M",
+        "outputId": "1e5767be-7811-4bfc-eaeb-7b8729a05755",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!ghc -e 'floor (92 / 10)'\n",
+        "!ghc -e 'floor (-92 / 10)'"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "9\n",
+            "-10\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "C9npJmIGjLnU"
+      },
+      "source": [
+        "# 質問 ceiling や truncate はありますか。"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "g2awhpFhVCQL"
@@ -1729,13 +1812,22 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "QBlbCX1pj79K"
+      },
+      "source": [
+        "# 質問 関数の型を調べる方法はあるか。"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "XkZ08fY0VEv6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "22fde204-eae8-4f3f-d1cd-ee7f880577a6"
+        "outputId": "7d674c4b-85ec-48b9-a11a-6023b33b0020"
       },
       "source": [
         "%%writefile doubleme.hs\n",
@@ -1745,7 +1837,7 @@
         "    print(doubleMe 9)\n",
         "    print(doubleMe 8.3)"
       ],
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -1763,12 +1855,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WICZfSInfhEF",
-        "outputId": "631c26c5-3baf-4bf4-91f2-1aa9cdbb541c"
+        "outputId": "662baaff-600c-496c-a468-ef735c79157d"
       },
       "source": [
         "!runghc doubleme.hs"
       ],
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -1781,25 +1873,35 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "DqV75lcfkhVB"
+      },
+      "source": [
+        "次の例で doubleUs を 2回定義しようとすると redundant エラーになる。"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "ZJDh4GipVhYq",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "83dc3f35-7898-4697-a41a-024cbab1f62f"
+        "outputId": "12da5ef8-3ec6-42a4-a28c-e89bf1ed0b18"
       },
       "source": [
         "%%writefile doubleus.hs\n",
         "doubleMe x = x + x\n",
-        "doubleUs x y = x*2 + y*2   \n",
+        "-- doubleUs x y = x*2 + y*2   \n",
+        "doubleUs x y = doubleMe x + doubleMe y\n",
         "\n",
         "main = do\n",
         "    print(doubleUs 4 9)\n",
         "    print(doubleUs 2.3 34.2)\n",
         "    print(doubleUs 28 88 + doubleMe 123)"
       ],
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -1817,12 +1919,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-LA5XHXngNtw",
-        "outputId": "dfc6a7f3-f472-405c-9436-85374e0d9626"
+        "outputId": "60aaba81-9fa0-4adf-fa8f-1b97b111316d"
       },
       "source": [
         "!runghc doubleus.hs"
       ],
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -1836,47 +1938,81 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "ldKkYAW3VtEX"
-      },
-      "source": [
-        "Prelude> doubleUs x y = doubleMe x + doubleMe y\n"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Mdjyx2G7bfMf"
-      },
-      "source": [
-        "Prelude> doubleSmallNumber x = if x > 100 then x else x*2\n",
-        "Prelude> doubleSmallNumber 120\n",
-        "120\n",
-        "Prelude> doubleSmallNumber 12\n",
-        "24\n"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
-        "id": "s7bImZu-cwh0"
+        "id": "PYRry4HUlQbB"
       },
       "source": [
-        "Haskell の if では else は必須。なぜなら if は式であり、返り値が必要だから。"
+        "# VSCode の拡張機能で次のように関数の型がわかる。"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "qV8VRsIJbm3I"
+        "id": "QlMG8DCdnHkk",
+        "outputId": "2edfa4ec-dbbd-4212-d719-115c0be1b798",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "# python\n",
+        "%%writefile ifthen.hs\n",
+        "-- Haskell の if では else は必須。なぜなら if は式であり、返り値が必要だから。\n",
+        "doubleSmallNumber :: (Ord a, Num a) => a -> a\n",
+        "doubleSmallNumber x = if x > 100 then x else x * 2\n",
+        "\n",
+        "main :: IO ()\n",
+        "main = do\n",
+        "  x <- readLn\n",
+        "  print (doubleSmallNumber x)"
+      ],
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Overwriting ifthen.hs\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_4cjdLG0nLHO",
+        "outputId": "17fc95a9-eab6-4ea5-cecd-fb31450957b0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!echo 120 | runghc ifthen.hs\n",
+        "!echo 12 | runghc ifthen.hs"
+      ],
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "120\n",
+            "24\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qV8VRsIJbm3I",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1928546d-953e-4c12-fc58-521644322bb3"
+      },
+      "source": [
+        "# python の if then は次のように書く\n",
         "\n",
         "def doubleSmallNumber (x) :\n",
         "    if x > 100 :\n",
@@ -1887,43 +2023,40 @@
         "print (doubleSmallNumber (120))\n",
         "print (doubleSmallNumber (12))"
       ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "PhAfzsAbdTHu"
-      },
-      "source": [
-        "Prelude> doubleSmallNumber' x = (if x > 100 then x else x*2) + 1 "
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "j02DA3mwdUGF"
-      },
-      "source": [
-        "上の例では `()` がないと違う意味になる。\n",
-        "\n",
-        "あと、関数名に \\` がついているが、バッククォートは名前に使えるので上ような使い方をする。"
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "120\n",
+            "24\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5mNdpWKTdsTr"
+        "id": "5mNdpWKTdsTr",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d45569c1-f1a1-4792-d12c-a184d011b45c"
       },
       "source": [
-        "Prelude> conanO'Brien = \"It's a-me, Conan O'Brien!\"   \n",
-        "Prelude> conanO'Brien \n",
-        "\"It's a-me, Conan O'Brien!\"\n"
+        "!ghc -e $'let conanO\\'Brien = \"It\\'s a-me, Conan O\\'Brien!\" in conanO\\'Brien'\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\"It's a-me, Conan O'Brien!\"\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1940,6 +2073,48 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "8jEh11mWxOeZ"
+      },
+      "source": [
+        ""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1sZcN_P-v_Yu",
+        "outputId": "21654492-7281-45b2-9a49-604d432d99d7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# `let in` とワンライナー\n",
+        "!ghc -e $'let doubleSmallNumber x = if x > 100 then x else x * 2 in doubleSmallNumber 18'"
+      ],
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "36\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NFruSv-mwb3y"
+      },
+      "source": [
+        "# いまここ"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "y6H51hT-zQ3d"
       },
       "source": [
@@ -1949,31 +2124,52 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "wnQmo8IGzSaV"
+        "id": "wnQmo8IGzSaV",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9e45cb8f-d701-4dda-dc6f-10d6fc62bc5a"
       },
       "source": [
-        "Prelude> let lostNumbers = [4,8,15,16,23,42]\n",
-        "Prelude> lostNumbers\n",
-        "[4,8,15,16,23,42]"
+        "!ghc -e $'let lostNumbers = [4,8,15,16,23,42] in lostNumbers'"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[4,8,15,16,23,42]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rvpkOXPo0aJu"
+        "id": "rvpkOXPo0aJu",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d71dbdb3-8cd4-4c36-fdae-b2bbabe8c2d3"
       },
       "source": [
-        "Prelude> [1,2,3,4] ++ [9,10,11,12]\n",
-        "[1,2,3,4,9,10,11,12]\n",
-        "Prelude> \"hello\" ++ \" \" ++ \"world\"\n",
-        "\"hello world\"\n",
-        "Prelude> ['w', 'o'] ++ ['o','t']\n",
-        "\"woot\"\n"
+        "!ghc -e $'[1,2,3,4] ++ [9,10,11,12]'\n",
+        "!ghc -e $'\"hello\" ++ \" \" ++ \"world\"'\n",
+        "!ghc -e $'[\\'w\\', \\'o\\'] ++ [\\'o\\',\\'t\\']'\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1,2,3,4,9,10,11,12]\n",
+            "\"hello world\"\n",
+            "\"woot\"\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
