--- a/learnlatex.ipynb
+++ b/learnlatex.ipynb
@@ -58,8 +58,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "X4JZJvQLY_rw",
-        "colab_type": "text"
+        "id": "X4JZJvQLY_rw"
       },
       "source": [
         "# メモ\n",
@@ -79,7 +78,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
         "id": "i_Cod0PRbZRu"
       },
       "source": [
@@ -95,8 +93,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "dlP5VSVvbsxB",
-        "colab_type": "text"
+        "id": "dlP5VSVvbsxB"
       },
       "source": [
         "# はじめに\n",
@@ -114,7 +111,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "b5fjp5twb95X",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 39
@@ -144,8 +140,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "cUEt1ITqcfp3",
-        "colab_type": "text"
+        "id": "cUEt1ITqcfp3"
       },
       "source": [
         "マークダウンで書く`LaTeX`の勉強なので、マークダウン内に書いて、そのソースというかどういうふうに書いたかはコードセルでセルマジックを使って確認する、という方針でどうだろう。\n",
@@ -156,8 +151,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "gS-20EZ4B0lL",
-        "colab_type": "text"
+        "id": "gS-20EZ4B0lL"
       },
       "source": [
         "# 簡単な数式"
@@ -166,8 +160,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "l9i9JMhU2VXE",
-        "colab_type": "text"
+        "id": "l9i9JMhU2VXE"
       },
       "source": [
         "$$\n",
@@ -179,7 +172,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "NXhBtJwreRGG",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 38
@@ -209,8 +201,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "VQ5cdQKxB0lO",
-        "colab_type": "text"
+        "id": "VQ5cdQKxB0lO"
       },
       "source": [
         "ここで $c$ は光速をあらわし、値は次の通り。\n",
@@ -223,7 +214,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "XaZ9k2NuebYv",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 38
@@ -253,8 +243,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "7JZQs8Ize_jf",
-        "colab_type": "text"
+        "id": "7JZQs8Ize_jf"
       },
       "source": [
         "数字のカンマはこうやって入れるのか。\n"
@@ -263,8 +252,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "JJRGMDwVF90w",
-        "colab_type": "text"
+        "id": "JJRGMDwVF90w"
       },
       "source": [
         "### 数字の前のドル`$`マーク\n",
@@ -275,8 +263,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "c8tGCBDJFPRg",
-        "colab_type": "text"
+        "id": "c8tGCBDJFPRg"
       },
       "source": [
         "### フォントの実験"
@@ -285,8 +272,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "1pTzPWuLFOP5",
-        "colab_type": "text"
+        "id": "1pTzPWuLFOP5"
       },
       "source": [
         "\n",
@@ -304,7 +290,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "205xo7fYfLLI",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 102
@@ -337,8 +322,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "L872XDCqfsyM",
-        "colab_type": "text"
+        "id": "L872XDCqfsyM"
       },
       "source": [
         "### 改行とスペース\n",
@@ -360,8 +344,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "A3Z0alVOPf75",
-        "colab_type": "text"
+        "id": "A3Z0alVOPf75"
       },
       "source": [
         "\n",
@@ -378,7 +361,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "z_hJqC1ggHRw",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 67
@@ -413,8 +395,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ufdfBaWyw9Te",
-        "colab_type": "text"
+        "id": "ufdfBaWyw9Te"
       },
       "source": [
         "`\\displaystyle`としないと、インラインスタイルでフォントが小さくなってしまう。\n",
@@ -424,8 +405,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "JbP2dlWhWjgc",
-        "colab_type": "text"
+        "id": "JbP2dlWhWjgc"
       },
       "source": [
         "# カッコ\n"
@@ -434,8 +414,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "izyrEmSv6mIS",
-        "colab_type": "text"
+        "id": "izyrEmSv6mIS"
       },
       "source": [
         "### 行列\n",
@@ -452,7 +431,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "FbVx5XVeB0lT",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 89
@@ -487,8 +465,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "l0WOCX6ZbsFA",
-        "colab_type": "text"
+        "id": "l0WOCX6ZbsFA"
       },
       "source": [
         "### 直交行列\n",
@@ -504,7 +481,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "hGPGMKjC5tUm",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 38
@@ -534,8 +510,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "dhROzMML5hQI",
-        "colab_type": "text"
+        "id": "dhROzMML5hQI"
       },
       "source": [
         "### シグマ\n",
@@ -548,7 +523,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "qXRmBXE2PuHC",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 67
@@ -579,8 +553,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "2KntNwKI62-c",
-        "colab_type": "text"
+        "id": "2KntNwKI62-c"
       },
       "source": [
         "### インテグラル\n",
@@ -597,7 +570,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "BwuoDXTSQKR7",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 59
@@ -632,7 +604,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
         "id": "rnTvi6nVHDuc"
       },
       "source": [
@@ -656,7 +627,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "SqHt58ANQ-Nb",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 100
@@ -693,8 +663,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ZGBMM_-F7WSs",
-        "colab_type": "text"
+        "id": "ZGBMM_-F7WSs"
       },
       "source": [
         "$$\n",
@@ -710,7 +679,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "Jb03yr1JSOma",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 82
@@ -746,8 +714,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "xXNNoAc0Sz8A",
-        "colab_type": "text"
+        "id": "xXNNoAc0Sz8A"
       },
       "source": [
         "### カッコのいろいろ\n",
@@ -764,7 +731,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "GV3TDo_bTfD9",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 105
@@ -798,8 +764,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "WDpAvDmh7mms",
-        "colab_type": "text"
+        "id": "WDpAvDmh7mms"
       },
       "source": [
         "$$\n",
@@ -811,7 +776,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "xKyM3qnxWuEC",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
@@ -842,8 +806,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "wW5eQSHD7sLL",
-        "colab_type": "text"
+        "id": "wW5eQSHD7sLL"
       },
       "source": [
         "$$\n",
@@ -859,8 +822,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "suZGBpjg72MT",
-        "colab_type": "text"
+        "id": "suZGBpjg72MT"
       },
       "source": [
         "\n",
@@ -873,7 +835,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "Ka0qoGgeXAey",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 48
@@ -906,7 +867,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "UgkUWCtbabhj",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 49
@@ -939,8 +899,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "9333Vy-YhjAk",
-        "colab_type": "text"
+        "id": "9333Vy-YhjAk"
       },
       "source": [
         "# 行列"
@@ -950,7 +909,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "yBKZWWP0hlDW",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 78
@@ -985,7 +943,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab_type": "code",
         "id": "drq4hK7fmryu",
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1021,8 +978,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "oPVkkflvRC-M",
-        "colab_type": "text"
+        "id": "oPVkkflvRC-M"
       },
       "source": [
         "### 行列をカッコで囲む\n",
@@ -1040,7 +996,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "AzzGRXcJRLVn",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 58
@@ -1077,8 +1032,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "tqISIHLwpP_P",
-        "colab_type": "text"
+        "id": "tqISIHLwpP_P"
       },
       "source": [
         "# 練習問題"
@@ -1087,8 +1041,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "0O1SWSw4SMjp",
-        "colab_type": "text"
+        "id": "0O1SWSw4SMjp"
       },
       "source": [
         "### 複素関数\n",
@@ -1109,7 +1062,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "jEwDgPrKU07h",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 63
@@ -1144,8 +1096,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "JCnkFEK7n0GD",
-        "colab_type": "text"
+        "id": "JCnkFEK7n0GD"
       },
       "source": [
         "### 空間曲線\n",
@@ -1162,7 +1113,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "zBzYoUr9o6CI",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 62
@@ -1194,8 +1144,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "v9f0D-eFpCl3",
-        "colab_type": "text"
+        "id": "v9f0D-eFpCl3"
       },
       "source": [
         "### 微分可能\n",
@@ -1213,7 +1162,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "hoLm8yHerEru",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 59
@@ -1245,8 +1193,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "R-e13l9GrQ43",
-        "colab_type": "text"
+        "id": "R-e13l9GrQ43"
       },
       "source": [
         "### $n$ 次正方行列\n",
@@ -1283,7 +1230,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "PtaIIJSRwUfX",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 152
@@ -1322,7 +1268,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "bdvtu7fYwI1W",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 119
@@ -1362,8 +1307,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "wdOsVm25xi6O",
-        "colab_type": "text"
+        "id": "wdOsVm25xi6O"
       },
       "source": [
         "### 二項関係\n",
@@ -1379,6 +1323,47 @@
         "1. $x, y \\in X$ について、$x \\rho y$ かつ $y \\rho x$ ならば $x = y$ が成り立つ。(反対称律)\n",
         "\n",
         "性質 $\\it{1, 2, 3}$ を満たす二項関係を**同値関係**と呼び、性質 $\\it{1, 3, 4}$ を満たす二項関係を**順序関係**と呼ぶ。"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AhnMk_wTnkZU"
+      },
+      "source": [
+        "# 集合の内包表記 set comprehension"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FPRji7FKkpWg",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 38
+        },
+        "outputId": "08ba266e-e30e-4696-d47b-1d2fbfbef25d"
+      },
+      "source": [
+        "# 参考 集合で習う集合の内包表記は数式で次の様に書く。\n",
+        "%%latex\n",
+        "\n",
+        "S= \\{2 \\cdot x \\mid x \\in  \\mathbb{N}, \\ x \\leq 10 \\}\n"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "\nS= \\{2 \\cdot x \\mid x \\in  \\mathbb{N}, \\ x \\leq 10 \\}",
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
       ]
     }
   ]
