Colaboratory を使用して作成しました

--- a/learnhaskell.ipynb
+++ b/learnhaskell.ipynb
@@ -6,7 +6,7 @@
       "name": "learnhaskell.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNyLG5KiTYeccPHV74w4+jI",
+      "authorship_tag": "ABX9TyO/MVhs+tuo9U604So5y0NQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2819,11 +2819,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Kb0ZV1uRfVgq",
-        "outputId": "a4fdf6e3-de9c-4ce5-9d27-a6af937a86b1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Kb0ZV1uRfVgq",
+        "outputId": "a4fdf6e3-de9c-4ce5-9d27-a6af937a86b1"
       },
       "source": [
         "# do not use floating point numbers in ranges\n",
@@ -2843,11 +2843,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "faDphCBjfrOA",
-        "outputId": "3f3ac762-b56a-40a4-da25-267897a79389",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "faDphCBjfrOA",
+        "outputId": "3f3ac762-b56a-40a4-da25-267897a79389"
       },
       "source": [
         "# infinite list\n",
@@ -2885,13 +2885,58 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "YDHFsquwkhFv"
+      },
+      "source": [
+        "集合で習う集合の内包表記は数式で次の様に書く。\n",
+        "\n",
+        "$$\n",
+        "S= \\{2 \\cdot x \\mid x \\in  \\mathbb{N}, \\ x \\leq 10 \\}\n",
+        "$$"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "u1EYZe1Ognc-",
-        "outputId": "7d6e9d06-6022-4e8f-b2bb-1d0af0512e36",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 38
+        },
+        "id": "FPRji7FKkpWg",
+        "outputId": "08ba266e-e30e-4696-d47b-1d2fbfbef25d"
+      },
+      "source": [
+        "# 参考 集合で習う集合の内包表記は数式で次の様に書く。\n",
+        "%%latex\n",
+        "\n",
+        "S= \\{2 \\cdot x \\mid x \\in  \\mathbb{N}, \\ x \\leq 10 \\}\n"
+      ],
+      "execution_count": 133,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "\nS= \\{2 \\cdot x \\mid x \\in  \\mathbb{N}, \\ x \\leq 10 \\}",
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "u1EYZe1Ognc-",
+        "outputId": "7d6e9d06-6022-4e8f-b2bb-1d0af0512e36"
       },
       "source": [
         "!ghc -e '[x*2 | x <- [1..10]]'\n",
@@ -2912,6 +2957,52 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pb5JIQUIimEX",
+        "outputId": "0276296d-37d4-43a9-f219-11fa94b7f9df",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!ghc -e 'let boomBangs xs = [ if x < 10 then \"BOOM!\" else \"BANG!\" | x <- xs, odd x] in boomBangs [7..13]'"
+      ],
+      "execution_count": 111,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[\"BOOM!\",\"BOOM!\",\"BANG!\",\"BANG!\"]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gCxWBDBBizHr",
+        "outputId": "64da1081-c234-401e-e4c2-fd350f693cbc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!ghc -e '[ x | x <- [10..20], x /= 13, x /= 15, x /= 19]'"
+      ],
+      "execution_count": 112,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[10,11,12,14,16,17,18,20]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "zvrQFVBIIOYx"
@@ -2926,14 +3017,6 @@
         "id": "OwzlGCwvGHgS"
       },
       "source": [
-        "\n",
-        "boomBangs xs = [ if x < 10 then \"BOOM!\" else \"BANG!\" | x <- xs, odd x]   \n",
-        "The last part of the comprehension is the predicate. The function odd returns True on an odd number and False on an even one. The element is included in the list only if all the predicates evaluate to True.\n",
-        "\n",
-        "ghci> boomBangs [7..13]  \n",
-        "[\"BOOM!\",\"BOOM!\",\"BANG!\",\"BANG!\"]   \n",
-        "We can include several predicates. If we wanted all numbers from 10 to 20 that are not 13, 15 or 19, we'd do:\n",
-        "\n",
         "ghci> [ x | x <- [10..20], x /= 13, x /= 15, x /= 19]  \n",
         "[10,11,12,14,16,17,18,20]  \n",
         "Not only can we have multiple predicates in list comprehensions (an element must satisfy all the predicates to be included in the resulting list), we can also draw from several lists. When drawing from several lists, comprehensions produce all combinations of the given lists and then join them by the output function we supply. A list produced by a comprehension that draws from two lists of length 4 will have a length of 16, provided we don't filter them. If we have two lists, [2,5,10] and [8,10,11] and we want to get the products of all the possible combinations between numbers in those lists, here's what we'd do.\n",
