Colaboratory を使用して作成しました

--- a/learnhtml.ipynb
+++ b/learnhtml.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "learnhtml.ipynb",
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyMrGSxx/7Gc6CA1DdBZIXwO",
+      "authorship_tag": "ABX9TyNHBuZdERP5ack0vcAddf3J",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -530,7 +529,9 @@
         ">\t&gt;\n",
         "\"\t&quot;\n",
         "'\t&apos;\n",
-        "&\t&amp;"
+        "&\t&amp;\n",
+        "–   &ndash;\n",
+        "—  &mdash;"
       ],
       "execution_count": null,
       "outputs": []
@@ -656,7 +657,6 @@
         "  </head>\n",
         "  <body>\n",
         "    <h1>Meta examples</h1>\n",
-        "\n",
         "    <p>Japanese example: ご飯が熱い。</p>\n",
         "  </body>\n",
         "</html>"
@@ -713,12 +713,12 @@
       "cell_type": "code",
       "metadata": {
         "id": "OWkLWcaoqzgK",
-        "cellView": "form",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 191
         },
-        "outputId": "02f3e740-a547-4129-cd7b-7de3b721200e"
+        "cellView": "form",
+        "outputId": "77036259-caab-491d-dc88-f56323e0c891"
       },
       "source": [
         "#@title コードを表示しない\n",
@@ -779,7 +779,7 @@
         "    // }\n",
         "</script>"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "display_data",
