Colaboratory を使用して作成しました

--- a/learnhtml.ipynb
+++ b/learnhtml.ipynb
@@ -6,7 +6,7 @@
       "name": "learnhtml.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOQnQ5wOjTC6ov8HRtKSbDU",
+      "authorship_tag": "ABX9TyNsa3rv4PCFKfT4VtLAX10a",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -75,7 +75,7 @@
         "地の文\n",
         "地の文2"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -225,6 +225,16 @@
             "tags": []
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "CucQPTftzuC3"
+      },
+      "source": [
+        "# HTML要素とは\r\n",
+        "`<h1></h1>`とか`<p></p>`のことで、文章を構造化している。"
       ]
     },
     {
@@ -692,7 +702,7 @@
         "  </body>\n",
         "</html>"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -750,7 +760,7 @@
         "    </fieldset>\n",
         "</form>"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1477,7 +1487,7 @@
         "\n",
         "<p><abbr title=\"National Aeronautics and Space Administration\">NASA</abbr> sure does some exciting work.</p>"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1707,7 +1717,7 @@
         "\n",
         "</body>"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4789,12 +4799,36 @@
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "metadata": {
-        "id": "aX00Gt8Z2SMp"
+        "id": "W4LcJckA1AbV",
+        "outputId": "78a2cfe2-8ee9-469a-e011-513e26615d07",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
       "source": [
-        "https://www.w3schools.com/html/html_intro.asp"
+        "# 実験 <a href=\"\"> としたときどうなるか\r\n",
+        "%%html\r\n",
+        "<a href=\"\">Ctrlを押しながらクリックしてみよう!!!!</a>"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<a href=\"\">Ctrlを押しながらクリックしてみよう!!!!</a>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
       ]
     },
     {
@@ -4803,7 +4837,8 @@
         "id": "HnjmYyblHAX_"
       },
       "source": [
-        "# いまここ"
+        "# いまここ\r\n",
+        "https://www.w3schools.com/html/html_intro.asp"
       ]
     }
   ]
