Colaboratory を使用して作成しました

--- a/learnhtml.ipynb
+++ b/learnhtml.ipynb
@@ -6,7 +6,7 @@
       "name": "learnhtml.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPtob2sXvJFrb9TkSsGuUCz",
+      "authorship_tag": "ABX9TyMFIXl1AOVxPRRs7mhsy8e0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -117,7 +117,7 @@
       },
       "source": [
         "# コメントの実験 \n",
-        "# %%html配下では # によるコメントが使えない。\n",
+        "# %%html配下では python の # によるコメントが使えない。\n",
         "# <script></script> の中ではスラッシュのコメント記法 //, /* */ が使える。\n",
         "# <style></style>の中では /* */ しか使えない\n",
         "%%html\n",
@@ -165,6 +165,19 @@
             "tags": []
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fdg-oc7MDNok"
+      },
+      "source": [
+        "結論的にはそれぞれの環境で正しいコメント記法は使えるので、正しいコメント記法に従う。\r\n",
+        "1. Python ベースのコードセルでは #。\r\n",
+        "1. html では `<!-- -->`。\r\n",
+        "1. script では // と /* */。\r\n",
+        "1. style では /* */。\r\n"
       ]
     },
     {
@@ -258,6 +271,15 @@
         "CDN だけでなく、`<title></title>` とか普通に `<head></head>` に入るものは使えない。\n",
         "\n",
         "`<html></html>` の中に書かれるものは全部使える。 従って、この環境では css と html と javascrip が学べる、ということになる。\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HztxMgzKD8bK"
+      },
+      "source": [
+        "# いまここ"
       ]
     },
     {
@@ -428,7 +450,7 @@
         "%%html\n",
         "<img src=\"https://raw.githubusercontent.com/mdn/beginner-html-site/gh-pages/images/firefox-icon.png\" width=\"100\">\n"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -450,18 +472,18 @@
       "cell_type": "code",
       "metadata": {
         "id": "fw6us2dwSGnM",
-        "outputId": "5e79a861-8300-449f-e5d3-4438269d1c11",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 121
-        }
+        },
+        "outputId": "5e79a861-8300-449f-e5d3-4438269d1c11"
       },
       "source": [
         "# 画像の挿入 SVG\r\n",
         "%%html\r\n",
         "<svg width=\"100\" height=\"100\" >  <circle cx=\"50\" cy=\"50\" r=\"40\" stroke=\"grey\"\" stroke-width=\"4\" fill=\"lightsalmon\" />  <circle cx=\"30\" cy=\"45\" r=\"10\" stroke=\"white\" stroke-width=\"4\" fill=\"black\" />  <circle cx=\"70\" cy=\"45\" r=\"10\" stroke=\"white\" stroke-width=\"4\" fill=\"black\" />  <circle cx=\"50\" cy=\"70\" r=\"10\" stroke=\"white\" stroke-width=\"1\" fill=\"red\" /></svg>"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
