Colaboratory を使用して作成しました

--- a/chartmath204trigonometry.ipynb
+++ b/chartmath204trigonometry.ipynb
@@ -6,7 +6,7 @@
       "name": "chartmath204trigonometry.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPU61ZC/+ulMQF7iVOjaktE",
+      "authorship_tag": "ABX9TyO9347Rv8vguwtBo3Wbomjc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,17 +26,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "e1HSpWw43j4R"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "RDVbHtLO3k7-"
@@ -44,6 +33,10 @@
       "source": [
         "# メモ\r\n",
         "数学を Colab で学ぶプロジェクト\r\n",
+        "\r\n",
+        "いま数学IIの三角関数 trigonometry\r\n",
+        "\r\n",
+        "\r\n",
         "\r\n"
       ]
     },
@@ -77,7 +70,7 @@
         "\\rm{OP} \\\\\r\n",
         "OP"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -128,7 +121,7 @@
         "display(Math(latex(Eq(theta, alpha + 360 * n), mul_symbol='times')))\r\n",
         "print(latex(Eq(theta, alpha + 360 * n), mul_symbol='times'))"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -165,18 +158,18 @@
       "cell_type": "code",
       "metadata": {
         "id": "9HTrhm6vf3O5",
-        "outputId": "0e997709-1b92-4467-aaaf-6792b64b2d34",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 38
-        }
+        },
+        "outputId": "0e997709-1b92-4467-aaaf-6792b64b2d34"
       },
       "source": [
         "# 参考 角度の記号\r\n",
         "%%latex\r\n",
         "\\angle A = 360^\\circ"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
