Colaboratory を使用して作成しました

--- a/learnlatex.ipynb
+++ b/learnlatex.ipynb
@@ -40,6 +40,7 @@
     "colab": {
       "name": "learnlatex.ipynb",
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     }
   },
@@ -63,11 +64,11 @@
         "# メモ\n",
         "\n",
         "1. colab は latex の中の数式部分である mathjaxをサポートしていて、数式は mathjaxを使って書ける。\n",
-        "1. 参考サイトを読みながら`MathJax`を勉強する。\n",
-        "\n",
+        "1. 参考サイトを読みながら`MathJax`を勉強する。  \n",
         "TeX入門 ( http://www.comp.tmu.ac.jp/tsakai/lectures/intro_tex.html )  \n",
         "TeX入門Wiki ( https://texwiki.texjp.org/)  \n",
-        "Learn LaTeX in 30 minutes ( https://www.overleaf.com/learn/latex/  Learn_LaTeX_in_30_minutes )  \n",
+        "Learn LaTeX in 30 minutes ( https://www.overleaf.com/learn/latex/ \n",
+        "Learn_LaTeX_in_30_minutes )  \n",
         "MathJax ( https://docs.mathjax.org/en/v2.5-latest/tex.html )"
       ]
     },
@@ -146,20 +147,19 @@
       "cell_type": "code",
       "metadata": {
         "id": "WLbawHy6vgvz",
-        "outputId": "0f3a1398-d3bf-451c-e2ce-cc19c6d0180b",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 56
-        }
+          "height": 39
+        },
+        "outputId": "90bfd5ea-6dca-4233-e846-d7b5eea0f59d"
       },
       "source": [
         "from sympy import *\r\n",
         "init_printing()\r\n",
         "x = symbols('x')\r\n",
-        "display(Eq(x, 3))\r\n",
-        "print(latex(Eq(x,3)))"
+        "display(Eq(x, 3))"
       ],
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
@@ -173,13 +173,6 @@
           "metadata": {
             "tags": []
           }
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "x = 3\n"
-          ],
-          "name": "stdout"
         }
       ]
     },
