Colaboratory を使用して作成しました

--- a/chartmath204trigonometry.ipynb
+++ b/chartmath204trigonometry.ipynb
@@ -6,7 +6,7 @@
       "name": "chartmath204trigonometry.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO9347Rv8vguwtBo3Wbomjc",
+      "authorship_tag": "ABX9TyPLn4bcwxDWw9HQxNmAvNpk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,10 +56,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 58
+          "height": 80
         },
         "id": "ezOra1-j82X7",
-        "outputId": "5362844e-3c1f-4c87-994c-ce953cdaf2e8"
+        "outputId": "c05c5042-a923-455a-f583-d660806aada7"
       },
       "source": [
         "# 参考\r\n",
@@ -67,15 +67,15 @@
         "% latex 中にコメントを入れるときは、% を使う。\r\n",
         "% rm は roman の意味か。 これを入れないとイタリックになる。\r\n",
         "OP\\\\\r\n",
-        "\\rm{OP} \\\\\r\n",
+        "\\mathrm{OP}\\\\\r\n",
         "OP"
       ],
-      "execution_count": null,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
-            "text/latex": "% latex 中にコメントを入れるときは、% を使う。\n% rm は roman の意味か。 これを入れないとイタリックになる。\nOP\\\\\n\\rm{OP} \\\\\nOP",
+            "text/latex": "% latex 中にコメントを入れるときは、% を使う。\n% rm は roman の意味か。 これを入れないとイタリックになる。\nOP\\\\\n\\mathrm{OP} \\\\\nOP",
             "text/plain": [
               "<IPython.core.display.Latex object>"
             ]
